--- a/package.json
+++ b/package.json
@@ -9,24 +9,28 @@
     "@chakra-ui/core": "^0.7.0",
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
+    "@hot-loader/react-dom": "^16.13.0",
     "emotion-theming": "^10.0.27",
+    "framer-motion": "^1.10.3",
     "gatsby": "^2.20.12",
     "gatsby-image": "^2.3.1",
     "gatsby-plugin-chakra-ui": "^0.1.4",
     "gatsby-plugin-emotion": "^4.2.1",
     "gatsby-plugin-manifest": "^2.3.3",
     "gatsby-plugin-offline": "^3.1.2",
-    "gatsby-plugin-react-helmet": "^3.2.1",
+    "gatsby-plugin-react-helmet-async": "^1.0.16",
     "gatsby-plugin-sharp": "^2.5.3",
     "gatsby-source-filesystem": "^2.2.2",
     "gatsby-source-graphql": "~2.1.32",
     "gatsby-theme-apollo": "^3.0.2",
     "gatsby-transformer-sharp": "^2.4.3",
     "isomorphic-fetch": "^2.2.1",
+    "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1",
+    "react-helmet-async": "^1.0.4",
+    "react-moment": "^0.9.7",
     "slash": "^3.0.0",
     "slugify": "^1.4.0"
   },
