--- a/package.json
+++ b/package.json
@@ -35,13 +35,16 @@
     "slugify": "^1.4.0"
   },
   "devDependencies": {
+    "@testing-library/cypress": "^6.0.0",
     "@testing-library/jest-dom": "^5.5.0",
     "@testing-library/react": "^10.0.2",
     "babel-jest": "^25.3.0",
     "babel-plugin-emotion": "^10.0.33",
     "babel-preset-gatsby": "^0.3.1",
+    "cypress": "^4.4.0",
     "eslint": "^6.8.0",
     "eslint-config-kentcdodds": "^14.8.1",
+    "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-jest": "^23.8.2",
     "husky": "^4.2.5",
     "identity-obj-proxy": "^3.0.0",
@@ -63,7 +66,8 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "jest"
+    "test": "jest",
+    "cy:open": "cypress open"
   },
   "husky": {
     "hooks": {
